// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Matches snapshot with multiple accounts links 1`] = `
<div>
  <div
    class="wrapper"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="nav"
      data-tracking="Primary navigation"
    >
      <div
        class="menuWrapper"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="menuList"
        >
          <li
            data-tracking="First link"
          >
            <button
              aria-controls="dropdown-more-from-nice"
              aria-expanded="false"
              aria-label="First link"
              class="link"
              id="navlink-more-from-nice"
            >
              <span>
                First link
              </span>
              <svg
                aria-hidden="true"
                class="icon"
                fill="none"
                focusable="false"
                height="1em"
                pointer-events="none"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26Z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <div
              class="dropdown wrapper"
              data-tracking="First link dropdown"
              id="dropdown-more-from-nice"
            >
              <div
                class="container"
              >
                <a
                  class="skiplink"
                  href="#navlink-link2"
                >
                  Skip 
                  First link
                   submenu
                </a>
                <section
                  aria-label="More from NICE - navigation"
                >
                  <h2
                    class="mt--0"
                  >
                    Explore more from NICE
                  </h2>
                  <div
                    class="grid"
                    gutter="loose"
                  >
                    <div
                      class="gridItem aboutCol"
                      data-tracking="Explore more"
                    >
                      <ul
                        class="listColumnar mt--d"
                      >
                        <li>
                          <a
                            href="https://www.test.nice.org/what-nice-does"
                          >
                            What NICE does
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/about-us"
                          >
                            About us
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/reusing-our-content"
                          >
                            Reusing our content
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/implementing-nice-guidance"
                          >
                            Implementing NICE guidance
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/news"
                          >
                            News, blogs and podcasts
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/contact-us"
                          >
                            Contact us
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/get-involved"
                          >
                            Get involved
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/careers"
                          >
                            Careers
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                  <hr />
                  <ul
                    class="inlineList mt--d"
                    data-tracking="Quick links"
                  >
                    <li>
                      <a
                        href="https://www.test.nice.org/get-involved/our-committees"
                      >
                        Join a committee
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.test.nice.org/get-involved/consultations"
                      >
                        Comment on a consultation
                      </a>
                    </li>
                  </ul>
                </section>
                <button
                  class="exit"
                  data-tracking="Close menu"
                >
                  Close menu 
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M480 392.508c0 10.052-3.52 18.598-10.559 25.637l-51.296 51.296C411.106 476.48 402.56 480 392.508 480c-10.053 0-18.598-3.52-25.638-10.559L256 358.571l-110.87 110.87C138.09 476.48 129.545 480 119.492 480c-10.052 0-18.598-3.52-25.637-10.559l-51.296-51.296C35.52 411.106 32 402.56 32 392.508c0-10.053 3.52-18.598 10.56-25.638L153.428 256 42.559 145.13C35.52 138.09 32 129.545 32 119.492c0-10.052 3.52-18.598 10.56-25.637l51.295-51.296C100.894 35.52 109.44 32 119.492 32c10.053 0 18.598 3.52 25.638 10.56L256 153.428l110.87-110.87C373.91 35.52 382.455 32 392.508 32c10.052 0 18.598 3.52 25.637 10.56l51.296 51.295C476.48 100.894 480 109.44 480 119.492c0 10.053-3.52 18.598-10.559 25.638L358.571 256l110.87 110.87C476.48 373.91 480 382.455 480 392.508Z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </li>
          <li
            data-tracking="Second link"
          >
            <a
              aria-label="Second link abbreviation title (lnk2)"
              class="link"
              href="https://www.test-link2.nice.org/url2/"
              id="navlink-link2"
            >
              <span>
                Second link
              </span>
            </a>
          </li>
          <li
            data-tracking="Third link"
          >
            <a
              aria-label="Third link abbreviation title (lnk3)"
              class="link"
              href="https://www.test.nice.org/url3/"
              id="navlink-link3"
            >
              <span>
                Third link
              </span>
              <svg
                aria-hidden="true"
                class="icon"
                fill="none"
                focusable="false"
                height="1em"
                pointer-events="none"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <ul
              aria-label="More NICE services"
              class="nonJsDropdown"
              id="link3"
            >
              <li>
                <a
                  href="https://nestedLink1"
                >
                  Nested link one
                </a>
              </li>
              <li>
                <a
                  href="https://nestedLink2"
                >
                  Nested link two
                </a>
              </li>
            </ul>
          </li>
          <li
            data-tracking="Fourth link"
          >
            <a
              aria-label="Fourth link"
              class="link"
              href="https://www.test.nice.org/url4/"
              id="navlink-test-service"
            >
              <span>
                Fourth link
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <nav
      aria-label="My account"
      class="nav myAccount"
    >
      <h2
        class="myAccountHeading"
      >
        My account
      </h2>
      <div
        class="menuWrapper"
      >
        <ul
          class="menuList"
        >
          <li>
            <a
              class="link"
              href="https://accounts.nice.org.uk/profile"
            >
              Joe Bloggs
            </a>
          </li>
          <li>
            <a
              class="link"
              href="https://accounts.nice.org.uk/signout"
            >
              Sign out
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Nav Matches snapshot with no accounts links 1`] = `
<div>
  <div
    class="wrapper"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="nav"
      data-tracking="Primary navigation"
    >
      <div
        class="menuWrapper"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="menuList"
        >
          <li
            data-tracking="First link"
          >
            <button
              aria-controls="dropdown-more-from-nice"
              aria-expanded="false"
              aria-label="First link"
              class="link"
              id="navlink-more-from-nice"
            >
              <span>
                First link
              </span>
              <svg
                aria-hidden="true"
                class="icon"
                fill="none"
                focusable="false"
                height="1em"
                pointer-events="none"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26Z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <div
              class="dropdown wrapper"
              data-tracking="First link dropdown"
              id="dropdown-more-from-nice"
            >
              <div
                class="container"
              >
                <a
                  class="skiplink"
                  href="#navlink-link2"
                >
                  Skip 
                  First link
                   submenu
                </a>
                <section
                  aria-label="More from NICE - navigation"
                >
                  <h2
                    class="mt--0"
                  >
                    Explore more from NICE
                  </h2>
                  <div
                    class="grid"
                    gutter="loose"
                  >
                    <div
                      class="gridItem aboutCol"
                      data-tracking="Explore more"
                    >
                      <ul
                        class="listColumnar mt--d"
                      >
                        <li>
                          <a
                            href="https://www.test.nice.org/what-nice-does"
                          >
                            What NICE does
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/about-us"
                          >
                            About us
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/reusing-our-content"
                          >
                            Reusing our content
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/implementing-nice-guidance"
                          >
                            Implementing NICE guidance
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/news"
                          >
                            News, blogs and podcasts
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/contact-us"
                          >
                            Contact us
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/get-involved"
                          >
                            Get involved
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/careers"
                          >
                            Careers
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                  <hr />
                  <ul
                    class="inlineList mt--d"
                    data-tracking="Quick links"
                  >
                    <li>
                      <a
                        href="https://www.test.nice.org/get-involved/our-committees"
                      >
                        Join a committee
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.test.nice.org/get-involved/consultations"
                      >
                        Comment on a consultation
                      </a>
                    </li>
                  </ul>
                </section>
                <button
                  class="exit"
                  data-tracking="Close menu"
                >
                  Close menu 
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M480 392.508c0 10.052-3.52 18.598-10.559 25.637l-51.296 51.296C411.106 476.48 402.56 480 392.508 480c-10.053 0-18.598-3.52-25.638-10.559L256 358.571l-110.87 110.87C138.09 476.48 129.545 480 119.492 480c-10.052 0-18.598-3.52-25.637-10.559l-51.296-51.296C35.52 411.106 32 402.56 32 392.508c0-10.053 3.52-18.598 10.56-25.638L153.428 256 42.559 145.13C35.52 138.09 32 129.545 32 119.492c0-10.052 3.52-18.598 10.56-25.637l51.295-51.296C100.894 35.52 109.44 32 119.492 32c10.053 0 18.598 3.52 25.638 10.56L256 153.428l110.87-110.87C373.91 35.52 382.455 32 392.508 32c10.052 0 18.598 3.52 25.637 10.56l51.296 51.295C476.48 100.894 480 109.44 480 119.492c0 10.053-3.52 18.598-10.559 25.638L358.571 256l110.87 110.87C476.48 373.91 480 382.455 480 392.508Z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </li>
          <li
            data-tracking="Second link"
          >
            <a
              aria-label="Second link abbreviation title (lnk2)"
              class="link"
              href="https://www.test-link2.nice.org/url2/"
              id="navlink-link2"
            >
              <span>
                Second link
              </span>
            </a>
          </li>
          <li
            data-tracking="Third link"
          >
            <a
              aria-label="Third link abbreviation title (lnk3)"
              class="link"
              href="https://www.test.nice.org/url3/"
              id="navlink-link3"
            >
              <span>
                Third link
              </span>
              <svg
                aria-hidden="true"
                class="icon"
                fill="none"
                focusable="false"
                height="1em"
                pointer-events="none"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <ul
              aria-label="More NICE services"
              class="nonJsDropdown"
              id="link3"
            >
              <li>
                <a
                  href="https://nestedLink1"
                >
                  Nested link one
                </a>
              </li>
              <li>
                <a
                  href="https://nestedLink2"
                >
                  Nested link two
                </a>
              </li>
            </ul>
          </li>
          <li
            data-tracking="Fourth link"
          >
            <a
              aria-label="Fourth link"
              class="link"
              href="https://www.test.nice.org/url4/"
              id="navlink-test-service"
            >
              <span>
                Fourth link
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Nav Matches snapshot with single accounts link 1`] = `
<div>
  <div
    class="wrapper"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="nav"
      data-tracking="Primary navigation"
    >
      <div
        class="menuWrapper"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="menuList"
        >
          <li
            data-tracking="First link"
          >
            <button
              aria-controls="dropdown-more-from-nice"
              aria-expanded="false"
              aria-label="First link"
              class="link"
              id="navlink-more-from-nice"
            >
              <span>
                First link
              </span>
              <svg
                aria-hidden="true"
                class="icon"
                fill="none"
                focusable="false"
                height="1em"
                pointer-events="none"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26Z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <div
              class="dropdown wrapper"
              data-tracking="First link dropdown"
              id="dropdown-more-from-nice"
            >
              <div
                class="container"
              >
                <a
                  class="skiplink"
                  href="#navlink-link2"
                >
                  Skip 
                  First link
                   submenu
                </a>
                <section
                  aria-label="More from NICE - navigation"
                >
                  <h2
                    class="mt--0"
                  >
                    Explore more from NICE
                  </h2>
                  <div
                    class="grid"
                    gutter="loose"
                  >
                    <div
                      class="gridItem aboutCol"
                      data-tracking="Explore more"
                    >
                      <ul
                        class="listColumnar mt--d"
                      >
                        <li>
                          <a
                            href="https://www.test.nice.org/what-nice-does"
                          >
                            What NICE does
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/about-us"
                          >
                            About us
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/reusing-our-content"
                          >
                            Reusing our content
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/implementing-nice-guidance"
                          >
                            Implementing NICE guidance
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/news"
                          >
                            News, blogs and podcasts
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/contact-us"
                          >
                            Contact us
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/get-involved"
                          >
                            Get involved
                          </a>
                        </li>
                        <li>
                          <a
                            href="https://www.test.nice.org/careers"
                          >
                            Careers
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                  <hr />
                  <ul
                    class="inlineList mt--d"
                    data-tracking="Quick links"
                  >
                    <li>
                      <a
                        href="https://www.test.nice.org/get-involved/our-committees"
                      >
                        Join a committee
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.test.nice.org/get-involved/consultations"
                      >
                        Comment on a consultation
                      </a>
                    </li>
                  </ul>
                </section>
                <button
                  class="exit"
                  data-tracking="Close menu"
                >
                  Close menu 
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M480 392.508c0 10.052-3.52 18.598-10.559 25.637l-51.296 51.296C411.106 476.48 402.56 480 392.508 480c-10.053 0-18.598-3.52-25.638-10.559L256 358.571l-110.87 110.87C138.09 476.48 129.545 480 119.492 480c-10.052 0-18.598-3.52-25.637-10.559l-51.296-51.296C35.52 411.106 32 402.56 32 392.508c0-10.053 3.52-18.598 10.56-25.638L153.428 256 42.559 145.13C35.52 138.09 32 129.545 32 119.492c0-10.052 3.52-18.598 10.56-25.637l51.295-51.296C100.894 35.52 109.44 32 119.492 32c10.053 0 18.598 3.52 25.638 10.56L256 153.428l110.87-110.87C373.91 35.52 382.455 32 392.508 32c10.052 0 18.598 3.52 25.637 10.56l51.296 51.295C476.48 100.894 480 109.44 480 119.492c0 10.053-3.52 18.598-10.559 25.638L358.571 256l110.87 110.87C476.48 373.91 480 382.455 480 392.508Z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </li>
          <li
            data-tracking="Second link"
          >
            <a
              aria-label="Second link abbreviation title (lnk2)"
              class="link"
              href="https://www.test-link2.nice.org/url2/"
              id="navlink-link2"
            >
              <span>
                Second link
              </span>
            </a>
          </li>
          <li
            data-tracking="Third link"
          >
            <a
              aria-label="Third link abbreviation title (lnk3)"
              class="link"
              href="https://www.test.nice.org/url3/"
              id="navlink-link3"
            >
              <span>
                Third link
              </span>
              <svg
                aria-hidden="true"
                class="icon"
                fill="none"
                focusable="false"
                height="1em"
                pointer-events="none"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <ul
              aria-label="More NICE services"
              class="nonJsDropdown"
              id="link3"
            >
              <li>
                <a
                  href="https://nestedLink1"
                >
                  Nested link one
                </a>
              </li>
              <li>
                <a
                  href="https://nestedLink2"
                >
                  Nested link two
                </a>
              </li>
            </ul>
          </li>
          <li
            data-tracking="Fourth link"
          >
            <a
              aria-label="Fourth link"
              class="link"
              href="https://www.test.nice.org/url4/"
              id="navlink-test-service"
            >
              <span>
                Fourth link
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <nav
      aria-label="My account"
      class="nav myAccount"
    >
      <div
        class="menuWrapper"
      >
        <ul
          class="menuList"
        >
          <li>
            <a
              class="link"
              href="https://accounts.nice.org.uk/"
            >
              Sign in
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Nav internalServices Matches snapshot with sub links for selected internal service 1`] = `
<div>
  <div
    class="wrapper wrapperWithSubLinks"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="nav"
      data-tracking="Primary navigation"
    >
      <div
        class="menuWrapper"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="menuList"
        >
          <li
            data-tracking="First internal service"
          >
            <a
              aria-current="true"
              aria-label="First internal service"
              class="link"
              href="https://www.test.nice.org/first-internal-service"
              id="navlink-internal1"
            >
              <span>
                First internal service
              </span>
            </a>
            <div
              class="wrapper"
            >
              <ul
                aria-label="First internal service links"
                class="list"
              >
                <li>
                  <a
                    aria-label="internal1 sub link 1"
                    class="link"
                    href="/i1sublink1"
                  >
                    internal1 sub link 1
                  </a>
                </li>
                <li>
                  <a
                    aria-label="internal1 sub link 2"
                    class="link"
                    href="/i2sublink2"
                  >
                    internal1 sub link 2
                  </a>
                </li>
              </ul>
            </div>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;
